fix: remove deprecated java URI() constr